# Refactorika

./: .env.example  .gitignore  CLAUDE.md  LICENSE  Makefile  README.md  docker-compose.yml  edit_memory_prd.md  pyproject.toml
demo_repo/: billing.py  orders.py  pyrightconfig.json  test_orders.py
docs/: 01-problem-and-purpose.md  01-problem-statement.md  02-scope.md  02-target-user.md  03-tech-stack.md  04-architecture.md  05-core-components.md  05-redis-iris.md  05-v2-features.md  05a-verification-harness.md  06-redis-integration.md  07-sentry-integration.md  08-risks-and-scope.md  09-success-metrics-and-demo.md  10-usage-and-user-journey.md  11-benchmarks-and-eval.md  12-benchmark-display-spec.md  12-harness-benchmark.md  13-full-system-benchmark.md  13-v3-roadmap.md  14-benchmark-case-catalog-and-stress-plan.md  14-custom-benchmark-spec.md  15-four-arm-agent-benchmark-contract.md  README.md  agents-and-languages.md  architecture.md  branches.md  cli-and-mcp.md  configuration.md  devpost.md  evaluation.md  module-reference.md  pipeline.md  project-overview.md  refatorika_plan.md  semantic_index_design.md  testing.md  usage.md  v2-worklog.md  v2_spec.md  (+2 more)
docs/narrow-scope-anika/: 04-architecture.md  CLAUDE.md  README.md
eval/: PLAN_agentic_mcp_arm.md  README.md  __init__.py  agent_bench.py  agent_loop.py  benchmark.py  fetch_benchmarks.sh  full_system_bench.py  harness_bench.py  harness_tasks.py  metrics_health.py  proposers.py  refactorbench.py  report.py  requirements.txt  run_eval.py  run_eval.sh  substrates.py
eval/agents/: __init__.py  campaign.py  driver.py  harness_tools.py  loop.py  metrics.py  prompts.py  providers.py  schema.py  tools.py
eval/full_system_cases/: __init__.py  behavior.py  multifile.py  recovery.py  scale.py  stress.py  stress_contracts_extra.py  stress_semantics_extra.py  stress_systems_extra.py
eval/results/: base_all_memoff.json  base_all_memoff.md  base_inscope_memoff.json  base_inscope_memoff.md  base_inscope_memon.json  base_inscope_memon.md  benchmark-20260621T044221+0000.json  benchmark-20260621T044256+0000.json  latest.json
refactorika/: __init__.py  cli.py  dashboard.py  docs_gen.py  harness.py  mcp_server.py  metrics.py  observability.py
refactorika/agents/: base.py  complexity_agent.py  dead_code_agent.py  duplicate_agent.py  import_agent.py  orchestrator.py
refactorika/analysis/: audit.py  call_graph.py  dead_code.py  duplicates.py  embeddings.py  parser.py  related.py
refactorika/core/: __init__.py  analyze.py  apply.py  gates.py  schema.py  storage.py
refactorika/graph/: __init__.py  model.py  order.py  resolver.py
refactorika/languages/: __init__.py  base.py  generic_adapter.py  python_adapter.py  registry.py
refactorika/llm/: __init__.py  client.py  providers.py
refactorika/memory/: agent_memory.py  codebase_index.py  context.py  decision_memory.py  vector_index.py
refactorika/pipeline/: __init__.py  checker.py  orchestrator.py  planner.py  planner_llm.py
refactorika/transforms/: __init__.py  base.py  cleanup.py  dead.py  dead_code.py  imports.py  move.py  node_replace.py  rename.py
scripts/: audit_reachability.py  backfill_sentry.py  demo.py  populate_sentry.py  replay_benchmark_sentry.py  replay_refactorbench_sentry.py  warmup.sh
src/refactorika/: cache.py  server.py
src/refactorika/analysis/: metrics.py  parser.py
src/refactorika/tools/: extract.py  flatten.py  imports.py  split_file.py
src/refactorika/transforms/: rewrite.py
tests/: conftest.py  test_agent_campaign.py  test_agent_decompose.py  test_agent_driver.py  test_agent_harness_tools.py  test_agent_loop.py  test_agent_memory.py  test_agent_metrics.py  test_agent_providers.py  test_agent_schema.py  test_agent_tools.py  test_apply_multi.py  test_audit.py  test_call_graph.py  test_codebase_index.py  test_confirm.py  test_core.py  test_dashboard.py  test_dead_code.py  test_decision_memory.py  test_docs_gen.py  test_duplicates.py  test_extract.py  test_flatten.py  test_full_system_behavior_cases.py  test_full_system_bench.py  test_full_system_case_registry.py  test_full_system_multifile_cases.py  test_full_system_recovery_cases.py  test_gates.py  test_graph.py  test_harness.py  test_harness_tasks.py  test_hybrid_live.py  test_imports.py  test_llm_planner.py  test_observability.py  test_pipeline.py  test_plan.py  test_providers.py  (+8 more)
