[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "refactorika"
version = "0.2.0"
requires-python = ">=3.11"
dependencies = [
    "anthropic[mcp]>=0.111.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "redis>=7.1",
    "numpy>=1.24",
    "sentry-sdk>=2.0",
]

[project.optional-dependencies]
semantic = [
    "openai>=1.0",
    "redisvl>=0.13",
    "sentence-transformers>=2.0",
]
dev = [
    "pytest>=8.0.0",
    "pyright>=1.1.0",
    "ruff>=0.6.0",
]

[project.scripts]
refactorika = "refactorika.cli:main"
refactorika-scan = "refactorika.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["refactorika"]

[tool.pyright]
pythonVersion = "3.11"
include = ["refactorika"]
strict = true

[tool.ruff]
src = ["refactorika"]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
