[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "refactorika"
version = "0.2.0"
description = "MCP server that gives Claude verified structural-refactoring powers over Python codebases"
authors = [{name = "Anikathapar", email = "anikathapar22@gmail.com"}]
license = {file = "LICENSE"}
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "anthropic[mcp]>=0.111.0",
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "libcst>=1.4.0",
    "rope>=1.13.0",
    "jedi>=0.19.0",
    "autoflake>=2.3.0",
    "radon>=6.0.0",
    "typer>=0.12.0",
    "redis>=7.1",
    "numpy>=1.24",
    "sentry-sdk>=2.0",
]

[project.optional-dependencies]
semantic = [
    "openai>=1.0",
    "redisvl>=0.13",
    "sentence-transformers>=2.0",
]
dev = [
    "pytest>=8.0.0",
    "pyright>=1.1.0",
    "ruff>=0.6.0",
    "fakeredis>=2.20.0",
]

[project.urls]
Homepage = "https://github.com/Tanush-A/Refactorika"
Repository = "https://github.com/Tanush-A/Refactorika"
Issues = "https://github.com/Tanush-A/Refactorika/issues"

[project.scripts]
refactorika = "refactorika.cli:main"
refactorika-scan = "refactorika.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["refactorika"]

[tool.pyright]
pythonVersion = "3.11"
include = ["refactorika"]
strict = true

[tool.pytest.ini_options]
# Only collect our suite — never the fetched benchmark repos under eval/external/.
testpaths = ["tests"]

[tool.ruff]
src = ["refactorika"]
target-version = "py311"
line-length = 100
# demo_repo is a deliberately messy fixture; eval/external is fetched third-party code.
extend-exclude = ["demo_repo", "eval/external"]

[tool.ruff.lint]
select = ["E", "F", "I"]
